Resolve PR feedback 2
Signed-off-by: Junqiu Lei <junqiu@amazon.com>